# Desafio-b2bflow

./: .env.example  .gitattributes  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
sql/: schema.sql
src/dispatch/: __init__.py  cli.py  config.py  logging.py  models.py  phone.py  repository.py  service.py  webhook.py  zapi.py
tests/: test_phone.py  test_service.py  test_zapi.py
