[project]
name = "b2bflow-dispatch"
version = "0.1.0"
description = "Motor de disparo de mensagens WhatsApp (Z-API) a partir de contatos no Supabase."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic-settings>=2.4",
    "tenacity>=9.0",
    "phonenumbers>=8.13",
    "structlog>=24.4",
    "supabase>=2.7",
    "typer>=0.12",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[project.scripts]
dispatch = "dispatch.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "respx>=0.21",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dispatch"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
